<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/base_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/billTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/arrow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_expand_more_24" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hidden_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/custTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_title"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/custValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_value"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_title"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/dateValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/date_value"
                        android:inputType="date"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/billNoTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/billno_title"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/billNoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/billno_value"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TableLayout
        android:id="@+id/tableLayoutTitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="No."
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name of items"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rate (in Rs)"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Quantity"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Amount"
                android:textSize="15sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNewBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/new_bill"
                android:textSize="15sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btnAddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/add_item"
                android:textSize="15sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btnSaveBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/save_bill"
                android:textSize="15sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <!--    <ScrollView-->
    <!--        android:id="@+id/scrollView"-->
    <!--        android:layout_width="fill_parent"-->
    <!--        android:layout_height="fill_parent"-->
    <!--        android:scrollbars="vertical">-->

    <!--        <TableLayout-->
    <!--            android:id="@+id/tableView"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content" />-->
    <!--    </ScrollView>-->
</LinearLayout>

